extensions/wikia/LocalNavigation/styles/LocalNavigation.scss
@import 'skins/shared/mixins/arrow';
@import 'skins/shared/mixins/calc';
@import 'skins/shared/mixins/clearfix';
@import 'skins/shared/color';
@import 'extensions/wikia/Venus/styles/variables';
@import 'extensions/wikia/Venus/styles/z-index';

.local-navigation-container {
	@include clearfix;
}

.local-navigation {
	background-color: $color-page;
	height: 80px;
	white-space: nowrap;
	width: 100%;

	a {
		color: inherit;

		&:hover, &.active {
			text-decoration: none;
		}
	}

	.local-nav {
		display: inline-block;
		vertical-align: top;
		white-space: normal;
	}

	.wordmark-container {
		display: inline-block;
		height: 100%;
		padding: 0 40px 0 30px;
		vertical-align: middle;

		> span {
			display: table;
			height: 100%;
		}
	}

	.wordmark {
		display: table-cell;
		vertical-align: middle;
		width: 160px;
	}

	.wordmark-text {
		display: inline-block;
		max-height: 80px;
		overflow: hidden;

		&.large {
			font-size: 27px;
		}

		&.medium {
			font-size: 24px;
		}

		&.small {
			font-size: 20px;
		}
	}

	.dropdown {
		position: absolute;
		visibility: hidden;
		z-index: $local-navigation-dropdown-z-index;

		&.right,
		&.contribute {
			right: 0;
		}

		&.right li {
			a, a::after {
				text-align: right;
			}

			span {
				left: auto;
				right: 20px;
			}
		}

		li {
			list-style: none;
		}

		> li:nth-child(n + 2) > a {
			border-top: 1px solid rgba($color-button-text, .2);
		}

		a {
			background-color: $color-buttons;
			display: block;
			padding: 20px;
			white-space: nowrap;
			width: 100%;

			&:hover,
			&.active {
				font-weight: bold;
			}

			&::after {
				content: attr(data-content);
				font-weight: bold;
				visibility: hidden;
			}

			span {
				left: 20px;
				position: absolute;
				right: auto;
			}
		}
	}

	.first-level-menu {
		height: 60px;
		margin: 0;
		padding: 20px 0 0;

		> li {
			display: block;
			float: left;
			height: 100%;
			position: relative;

			> a {
				display: block;
				font-size: 15px;
				font-weight: bold;
				height: 100%;
				line-height: 45px;
				padding: 0 20px;
			}

			&:nth-child(n + 2) {
				border-left: 1px solid $color-page-border;
			}

			&.active {
				background: $color-buttons;
				border-color: $color-page;
				color: $color-button-text;

				+ li {
					border-color: $color-page;
				}

				.second-level-menu {
					visibility: visible;
				}
			}
		}
	}

	.second-level-menu {
		@include calc(min-width, '100% + 1px');

		.has-more {
			padding-right: 40px;

			span {
				left: 20px;
				right: 40px;
			}

			span::after {
				@include arrow(4px, rgba($color-button-text, .5), 'right');
				content: ' ';
				float: right;
				margin: 1px -20px 0 0;
				position: static;
			}

			&:hover span::after {
				border-left-color: rgba($color-button-text, .8);
			}
		}

		&.right {
			.has-more {
				padding-left: 40px;

				span {
					left: 40px;
					right: 20px;
				}

				span::after {
					@include arrow(4px, rgba($color-button-text, .5), 'left');
					float: left;
					margin: 1px 0 0 -20px;
				}

				&.active span::after {
					border-right-color: rgba($color-button-text, .8);
				}
			}

			.third-level-menu {
				left: auto;
				right: 100%;
			}
		}

		.second-level-row.active .third-level-menu {
			visibility: visible;
		}
	}

	.third-level-menu {
		background: none;
		display: block;
		height: 100%;
		left: 100%;
		top: 0;
		visibility: hidden;

		.third-level-row {
			background: $color-buttons;

			&:first-child a {
				border-top-width: 5px;
			}

			&:last-child a {
				border-bottom-width: 5px;
			}

			&:nth-child(n + 2) a {
				border-top: 1px solid $color-buttons;
			}
		}

		a {
			$third-level-tint: if(lightness($color-buttons) < 50, #fff, #000);

			background: rgba($third-level-tint, .2);
			border-color: $color-buttons;
			border-left-width: 5px;
			border-right-width: 5px;
			border-style: solid;
			padding: 10px;

			&:hover {
				background: rgba($third-level-tint, .4);
				font-weight: normal;
			}
		}
	}

	.contribute-container {
		color: $color-button-text;
		display: inline-block;
		padding-top: 20px;
		position: absolute;
		right: 30px;

		.contribute-button {
			background-color: $color-buttons;
			cursor: pointer;
			display: table-cell;
			font-size: 12px;
			font-weight: bold;
			height: 40px;
			padding: 8px 15px 8px 20px;
			position: relative;
			text-transform: uppercase;
			vertical-align: middle;

			&::after {
				@include arrow(5px, rgba($color-button-text, .5));
				content: ' ';
				display: inline-block;
				margin: -2px 0 0 15px;
			}
		}

		.dropdown {
			min-width: 100%;
		}

		&.active {
			.contribute-button {
				border-bottom: 1px solid rgba($color-button-text, .2);
				height: 41px;

				&::after {
					border-top-color: $color-button-text;
				}
			}

			.dropdown {
				visibility: visible;
			}
		}
	}
}

@media #{$small-only} {
	.local-navigation {
		.wordmark-container {
			padding: 0 30px 0 24px;
		}

		.contribute-container {
			display: none;
		}
	}
}

@media #{$large-up} {
	.local-navigation {
		.wordmark-container {
			padding-left: 32px;
		}

		.contribute-container {
			right: 53px;
		}
	}
}

